Added missing creation of include/Santa folder to libsanta's makefile, and copying of .h files.
git-svn-id: http://svn.osdrawer.net/armyknife@18 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/Makefile_libsanta
+++ b/Makefile_libsanta
@@ -47,9 +47,11 @@ DEPDIR := dependencies/libsanta
 SRCDIR := source/Santa
 INCLUDEDIR := source/Santa
 RELEASEDIR := lib
+HEADERDIR := include/Santa
 
-BASEINCLUDES := $(shell cd $(INCLUDEDIR) && ls -1)
+BASEINCLUDES := $(shell cd $(INCLUDEDIR) && ls -1 *.h)
 INCLUDES := $(addprefix -I$(INCLUDEDIR)/,$(BASEINCLUDES))
+HEADERS := $(addprefix $(SRCDIR)/,$(BASEINCLUDES))
 
 # create directories
 MAKEDEP := $(shell mkdir -p $(DEPDIR))
@@ -97,6 +99,8 @@ all : build
 install : build
 	@cp $(OBJDIR)/$(BINARY) $(RELEASEDIR)/$(BINARY)
 	@$(MIMESET) -f $(RELEASEDIR)/$(BINARY)
+	@mkdir -p $(HEADERDIR)
+	@cp $(HEADERS) $(HEADERDIR)
 
 build : $(BINARY)
 
@@ -104,6 +108,7 @@ clean :
 	@rm -f $(RELEASEDIR)/$(BINARY)
 	@rm -rf $(OBJDIR)
 	@rm -rf $(DEPDIR)
+	@rm -rf $(HEADERDIR)
 	@rm -f $(TEMPDEPFILE)
 
 $(BINARY) : $(OBJDIR) $(OBJECTS)
