Include Documentation and Change Log in make release target. The build could be improved a lot, but this works for now. Source too should be included in the release folder, and ideally it would be as easy as copying the source folder into the release folder, but the current folder layout makes it cumbersome. Or maybe I'm just lacking my caffein.
git-svn-id: http://svn.osdrawer.net/armyknife@26 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/Makefile_armyknife
+++ b/Makefile_armyknife
@@ -52,6 +52,7 @@ INCLUDEDIR := include
 DATADIR := documentation/armyknife
 LIBDIR := lib
 RELEASEDIR := release/ArmyKnife
+RELEASEDOCSDIR := release/ArmyKnife/Documentation
 
 BASEINCLUDES := $(shell cd $(INCLUDEDIR) && ls -1)
 INCLUDES := $(addprefix -I$(INCLUDEDIR)/,$(BASEINCLUDES))
@@ -117,6 +118,11 @@ clean :
 	@rm -f $(TEMPDEPFILE)
 
 all : zipfile
+
+release : $(BINARY)
+	@cp -r $(DATADIR)/ $(RELEASEDIR)/Documentation
+	@rm -rf $(RELEASEDOCSDIR)/.svn/
+	@cp -r documentation/armyknife_changelog.txt "$(RELEASEDOCSDIR)/Change Log"
 
 $(BINARY) : $(OBJDIR) $(OBJECTS)
 	@rm -f $(TEMPDEPFILE)
