Exported old rsrc files to .rdef files, added to the Makefiles to generate the rsrc files during make, added the HVIF icon to ArmyKnifeTTE
git-svn-id: http://svn.osdrawer.net/armyknife@30 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/Makefile_armyknife
+++ b/Makefile_armyknife
@@ -38,6 +38,7 @@ VERSION := 4.1
 BUILDDATE := $(shell date +%Y-%b-%d)
 FULLNAME := $(SHORTNAME)-$(VERSION)-$(BUILDDATE)
 RESOURCES := ArmyKnife.rsrc
+RESOURCESRDEF := ArmyKnife.rdef
 #DEFINES := 
 
 # libraries
@@ -135,6 +136,7 @@ $(BINARY) : $(OBJDIR) $(OBJECTS)
 	@echo linking $@
 	@$(LD) -o $(RELEASEDIR)/$@ $(OBJECTS) $(LDFLAGS)
 	@echo merging resources
+	@rc $(SRCDIR)/$(RESOURCESRDEF)
 	@xres -o $(RELEASEDIR)/$@ $(SRCDIR)/$(RESOURCES)
 	@mimeset -f $(RELEASEDIR)/$@
 	
