--- a/Makefile_armyknife_tte
+++ b/Makefile_armyknife_tte
@@ -32,11 +32,14 @@
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.    
 
 # the executable
-BINARY := ArmyKnifeTTE-M
+BINARY := ArmyKnifeTTE
 SHORTNAME := ArmyKnifeTTE
 VERSION := 4.1
-BUILDDATE := $(shell date +%Y-%b-%d)
+BUILDDATE := $(shell date +%Y-%m-%d)
+GCCMAJVERSION := $(shell gcc --version | head -c 1)
+OSVERSION := $(shell uname -o)
 FULLNAME := $(SHORTNAME)-$(VERSION)-$(BUILDDATE)
+ZIPFULLNAME := $(SHORTNAME)-$(VERSION)-gcc$(GCCMAJVERSION)-$(OSVERSION)-$(BUILDDATE)
 RESOURCES := ArmyKnifeTTE.rsrc
 RESOURCESRDEF := ArmyKnifeTTE.rdef
 DEFINES := -D_TTE_
@@ -116,15 +119,16 @@ clean :
 	@echo cleaning
 	@rm -rf $(RELEASEDIR) $(OBJDIR) $(DEPDIR)
 	@rm -f $(TEMPDEPFILE)
-	@rm -rf /tmp/$(FULLNAME)
-	@rm -rf /tmp/$(FULLNAME).zip
-	@rm -rf $(RELEASEDIR)/$(FULLNAME)
-	@rm -rf $(RELEASEDIR)/$(FULLNAME).zip
+	@rm -rf /tmp/$(SHORTNAME)
+	@rm -rf /tmp/$(ZIPFULLNAME).zip
+	@rm -rf $(RELEASEDIR)/$(SHORTNAME)
+	@rm -rf $(RELEASEDIR)/$(ZIPFULLNAME).zip
 
 all : zipfile
 
 release : $(BINARY)
 	@mkdir -p $(RELEASEDIR)
+	@cp -r .OptionalPackageDescription $(RELEASEDIR)
 	@cp -r $(LIBDIR)/ $(RELEASEDIR)/lib
 	@cp -r $(DATADIR)/ $(RELEASEDIR)/Documentation
 	@cp -r $(CHANGELOG) "$(RELEASEDOCSDIR)/Change Log"
@@ -150,11 +154,11 @@ $(DEPDIR)/%.d : $(SRCDIR)/%.cpp
 	@/bin/echo $(OBJDIR)/$(basename $(@F))".o : $(MAKEFILE)" | /bin/cat - $(TEMPDEPFILE) > $@
 
 zipfile : clean release
-	@rm -rf $(RELEASEDIR)/../$(FULLNAME)
-	@copyattr -d -r $(RELEASEDIR)/ /tmp/$(FULLNAME)
-	@cd /tmp && $(ZIP) $(FULLNAME).zip $(FULLNAME)
-	@mv /tmp/$(FULLNAME).zip $(RELEASEDIR)/../
-	@rm -rf /tmp/$(FULLNAME)
+#	@rm -rf $(RELEASEDIR)/../$(SHORTNAME)
+	@copyattr -d -r $(RELEASEDIR)/ /tmp/$(SHORTNAME)
+	@cd /tmp && $(ZIP) $(ZIPFULLNAME).zip $(SHORTNAME)
+	@mv /tmp/$(ZIPFULLNAME).zip $(RELEASEDIR)/../
+	@rm -rf /tmp/$(ZIPFULLNAME)
 
 ifneq ($(MAKECMDGOALS),clean)
 ifneq ($(MAKECMDGOALS),depend)
