Removing unused parts of libsanta. Likely to eventually migrate to libwalter and Haiku layouting.
git-svn-id: http://svn.osdrawer.net/armyknife@39 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/source/Santa/Makefile
+++ b/source/Santa/Makefile
@@ -4,31 +4,11 @@ INCLUDE_DIR = ../../include
 LIBRARY_DIR = ../../lib
 
 HDRS =	BetterScrollView.h\
-			CLVColumn.h\
-			CLVColumnLabelView.h\
-			CLVEasyItem.h\
-			CLVRefListItem.h\
-			CLVListItem.h\
 			Colors.h\
-			ColumnListView.h\
-			Cursors.h\
-			NewStrings.h\
-			PrefilledBitmap.h\
-			ScrollViewCorner.h\
-			UserResizeSplitView.h
+			ScrollViewCorner.h
 
 SRCS =	BetterScrollView.cpp\
-			CLVColumn.cpp\
-			CLVColumnLabelView.cpp\
-			CLVEasyItem.cpp\
-			CLVRefListItem.cpp\
-			CLVListItem.cpp\
-			ColumnListView.cpp\
-			Cursors.cpp\
-			NewStrings.cpp\
-			PrefilledBitmap.cpp\
-			ScrollViewCorner.cpp\
-			UserResizeSplitView.cpp
+			ScrollViewCorner.cpp
 
 OBJS = $(SRCS:.cpp=.o)
 
