Syncing simplified application signatures. Bumping app_version in resources. Link with libtracker.so so using AK as a Tracker add-on actually works.
git-svn-id: http://svn.osdrawer.net/armyknife@41 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/Makefile_armyknife
+++ b/Makefile_armyknife
@@ -46,7 +46,7 @@ RESOURCESRDEF := ArmyKnife.rdef
 
 # libraries
 SYS_LIBS := -lbe -lroot 
-SRC_LIBS := -ltag -lsanta
+SRC_LIBS := -ltag -lsanta -ltracker
 
 # directories
 OBJDIR := objects/armyknife
