--- a/Makefile_armyknife_tte
+++ b/Makefile_armyknife_tte
@@ -46,7 +46,7 @@ DEFINES := -D_TTE_
 
 # libraries
 SYS_LIBS := -lbe -lroot 
-SRC_LIBS := -ltag -lsanta
+SRC_LIBS := -ltag -lsanta -ltracker
 
 # directories
 OBJDIR := objects/armyknife_tte
