--- a/Makefile_armyknife
+++ b/Makefile_armyknife
@@ -40,8 +40,8 @@ GCCMAJVERSION := $(shell gcc --version | head -c 1)
 OSVERSION := $(shell uname -o)
 FULLNAME := $(SHORTNAME)-$(VERSION)-$(BUILDDATE)
 ZIPFULLNAME := $(SHORTNAME)-$(VERSION)-gcc$(GCCMAJVERSION)-$(OSVERSION)-$(BUILDDATE)
-RESOURCES := ArmyKnife.rsrc
-RESOURCESRDEF := ArmyKnife.rdef
+RESOURCES := armyknife.rsrc
+RESOURCESRDEF := armyknife.rdef
 #DEFINES := 
 
 # libraries
@@ -51,7 +51,7 @@ SRC_LIBS := -ltag -lsanta -ltracker
 # directories
 OBJDIR := objects/armyknife
 DEPDIR := dependencies/armyknife
-SRCDIR := source/ArmyKnife
+SRCDIR := source/armyknife
 INCLUDEDIR := include
 DATADIR := documentation/armyknife
 LIBDIR := lib
