moving to lower-case, part 6.
git-svn-id: http://svn.osdrawer.net/armyknife@59 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/Makefile_armyknife_tte
+++ b/Makefile_armyknife_tte
@@ -40,8 +40,8 @@ GCCMAJVERSION := $(shell gcc --version | head -c 1)
 OSVERSION := $(shell uname -o)
 FULLNAME := $(SHORTNAME)-$(VERSION)-$(BUILDDATE)
 ZIPFULLNAME := $(SHORTNAME)-$(VERSION)-gcc$(GCCMAJVERSION)-$(OSVERSION)-$(BUILDDATE)
-RESOURCES := armyknifette.rsrc
-RESOURCESRDEF := armyknifette.rdef
+RESOURCES := armyknife_tte.rsrc
+RESOURCESRDEF := armyknife_tte.rdef
 DEFINES := -D_TTE_
 
 # libraries
