Add location of taglib include files in /boot/common.
git-svn-id: http://svn.osdrawer.net/armyknife@60 67539fd6-432c-0410-ad19-9ddc0ca9f31c

--- a/Makefile_armyknife
+++ b/Makefile_armyknife
@@ -61,6 +61,7 @@ CHANGELOG := documentation/armyknife_changelog.txt
 
 BASEINCLUDES := $(shell cd $(INCLUDEDIR) && ls -1)
 INCLUDES := $(addprefix -I$(INCLUDEDIR)/,$(BASEINCLUDES))
+INCLUDES += -I/boot/common/include/taglib
 
 # dependencies
 TEMPDEPFILE := /tmp/armyknife_temp_deps
