Album artwork support added by GCI2012 student Gleb Posobin

--- a/Makefile_armyknife_tte
+++ b/Makefile_armyknife_tte
@@ -45,7 +45,7 @@ RESOURCESRDEF := armyknife_tte.rdef
 DEFINES := -D_TTE_
 
 # libraries
-SYS_LIBS := -lbe -lroot 
+SYS_LIBS := -lbe -lroot -ltranslation
 SRC_LIBS := -ltag -lsanta -ltracker
 
 # directories
