--- a/Makefile_armyknife
+++ b/Makefile_armyknife
@@ -45,7 +45,7 @@ RESOURCESRDEF := armyknife.rdef
 #DEFINES := 
 
 # libraries
-SYS_LIBS := -lbe -lroot 
+SYS_LIBS := -lbe -lroot -ltranslation
 SRC_LIBS := -ltag -lsanta -ltracker
 
 # directories
