Convert the layout to use the Haiku Layout API
This also gets rid of the dependency on libsanta
TuneTracker code was not touched beyond making it compile, as the unchanged
TTE crashes on startup

--- a/Makefile_armyknife
+++ b/Makefile_armyknife
@@ -46,7 +46,7 @@ RESOURCESRDEF := armyknife.rdef
 
 # libraries
 SYS_LIBS := -lbe -lroot -ltranslation
-SRC_LIBS := -ltag -lsanta -ltracker
+SRC_LIBS := -ltag -ltracker
 
 # directories
 OBJDIR := objects/armyknife
