--- a/Makefile_armyknife_tte
+++ b/Makefile_armyknife_tte
@@ -1,160 +1,152 @@
-# ----------------
-# JBQ code license
-# ----------------
-# 
-# Copyright 1996,97,98,99,2000 Jean-Baptiste M. QUERU
-# All rights reserved.
-# 
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions
-# are met:
-# 
-# 1. Redistributions of source code must retain the above copyright
-#    notice, this list of conditions, and the following disclaimer.
-# 
-# 2. Redistributions in binary form must reproduce the above copyright
-#    notice, this list of conditions, and the following disclaimer in the
-#    documentation and/or other materials provided with the distribution.
-# 
-# 3. The name of the author may not be used to endorse or promote products
-#    derived from this software without specific prior written permission.
-# 
-# 
-# THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR
-# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
-# OF TITLE, NON-INFRINGEMENT, MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-# PURPOSE ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY
-# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
-# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
-# AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
-# TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
-# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.    
+## Haiku Generic Makefile v2.6 ## 
 
-# the executable
-BINARY := ArmyKnifeTTE
-SHORTNAME := ArmyKnifeTTE
-VERSION := 5.0
-BUILDDATE := $(shell date +%Y-%m-%d)
-GCCMAJVERSION := $(shell gcc --version | head -c 1)
-OSVERSION := $(shell uname -o)
-FULLNAME := $(SHORTNAME)-$(VERSION)-$(BUILDDATE)
-ZIPFULLNAME := $(SHORTNAME)-$(VERSION)-gcc$(GCCMAJVERSION)-$(OSVERSION)-$(BUILDDATE)
-RESOURCES := armyknife_tte.rsrc
-RESOURCESRDEF := armyknife_tte.rdef
-DEFINES := -D_TTE_
+## Fill in this file to specify the project being created, and the referenced
+## Makefile-Engine will do all of the hard work for you. This handles any
+## architecture of Haiku.
 
-# libraries
-SYS_LIBS := -lbe -lroot -ltranslation
-SRC_LIBS := -ltag -ltracker
+# The name of the binary.
+NAME = ArmyKnifeTTE
 
-# directories
-OBJDIR := objects/armyknife_tte
-DEPDIR := dependencies/armyknife_tte
-SRCDIR := source
-DATADIR := documentation/armyknife_tte
-RELEASEDIR := release/ArmyKnifeTTE
-RELEASEDOCSDIR := release/ArmyKnifeTTE/Documentation
-CHANGELOG := documentation/armyknife_changelog.txt
+# The type of binary, must be one of:
+#	APP:	Application
+#	SHARED:	Shared library or add-on
+#	STATIC:	Static library archive
+#	DRIVER: Kernel driver
+TYPE = APP
 
-# dependencies
-TEMPDEPFILE := /tmp/armyknife_tte_temp_deps
+# 	If you plan to use localization, specify the application's MIME signature.
+APP_MIME_SIG = application/x-vnd.armyknife-tte
 
-# compiler, linker, ...
-CC := gcc -c -pipe
-LD := gcc
+#	The following lines tell Pe and Eddie where the SRCS, RDEFS, and RSRCS are
+#	so that Pe and Eddie can fill them in for you.
+#%{
+# @src->@ 
 
-CFLAGS += $(DEFINES)
-CFLAGS += -DBUILD_DATE=\"$(BUILDDATE)\"
-#CFLAGS += -Wall -W -Wno-multichar -Wpointer-arith
-#CFLAGS += -Wwrite-strings -Woverloaded-virtual
-#CFLAGS += -Wconversion -Wpointer-arith
-#CFLAGS += -Wstrict-prototypes -Wmissing-prototypes -Wmissing-declarations
-#CFLAGS += -Wcast-qual -Wshadow
+#	Specify the source files to use. Full paths or paths relative to the 
+#	Makefile can be included. All files, regardless of directory, will have
+#	their object files created in the common object directory. Note that this
+#	means this Makefile will not work correctly if two source files with the
+#	same name (source.c or source.cpp) are included from different directories.
+#	Also note that spaces in folder names do not work well with this Makefile.
+SRCS = \
+	source/addonview.cpp \
+	source/aklistview.cpp \
+	source/albumpictureview.cpp \
+	source/application.cpp \
+	source/appview.cpp \
+	source/appwindow.cpp \
+	source/audioattribute.cpp \
+	source/audioattributes.cpp \
+	source/audioinfo.cpp \
+	source/barberpole.cpp \
+	source/createmimetypes.cpp \
+	source/editorview.cpp \
+	source/entryrefitem.cpp \
+	source/genrelist.cpp \
+	source/id3tag.cpp \
+	source/id3tags.cpp \
+	source/mpegview.cpp \
+	source/naview.cpp \
+	source/nawindow.cpp \
+	source/picklistview.cpp \
+	source/preferences.cpp \
+	source/taview.cpp \
+	source/ttinfoview.cpp
 
-LDFLAGS := $(SYS_LIBS) $(SRC_LIBS)
 
-DEP := gcc -MM $(DEFINES)
+#	Specify the resource definition files to use. Full or relative paths can be
+#	used.
+RDEFS = sources/armyknife_tte.rdef
 
-# create the dep dir.
-MAKEDEP := $(shell mkdir -p $(DEPDIR))
+#	Specify the resource files to use. Full or relative paths can be used.
+#	Both RDEFS and RSRCS can be utilized in the same Makefile.
+RSRCS = 
 
-ZIP := zip -r -9 -y
+# End Pe/Eddie support.
+# @<-src@ 
+#%}
 
-################################################
+#	Specify libraries to link against.
+#	There are two acceptable forms of library specifications:
+#	-	if your library follows the naming pattern of libXXX.so or libXXX.a,
+#		you can simply specify XXX for the library. (e.g. the entry for
+#		"libtracker.so" would be "tracker")
+#
+#	-	for GCC-independent linking of standard C++ libraries, you can use
+#		$(STDCPPLIBS) instead of the raw "stdc++[.r4] [supc++]" library names.
+#
+#	- 	if your library does not follow the standard library naming scheme,
+#		you need to specify the path to the library and it's name.
+#		(e.g. for mylib.a, specify "mylib.a" or "path/mylib.a")
+LIBS = be tag translation
 
-# the engine
+#	Specify additional paths to directories following the standard libXXX.so
+#	or libXXX.a naming scheme. You can specify full paths or paths relative
+#	to the Makefile. The paths included are not parsed recursively, so
+#	include all of the paths where libraries must be found. Directories where
+#	source files were specified are	automatically included.
+LIBPATHS = 
 
-MAKEFILE := Makefile
+#	Additional paths to look for system headers. These use the form
+#	"#include <header>". Directories that contain the files in SRCS are
+#	NOT auto-included here.
+SYSTEM_INCLUDE_PATHS = 
 
-DATA := $(shell find $(DATADIR) -type f)
+#	Additional paths paths to look for local headers. These use the form
+#	#include "header". Directories that contain the files in SRCS are
+#	automatically included.
+LOCAL_INCLUDE_PATHS = 
 
-BASESOURCES := $(shell cd $(SRCDIR) && ls -1 *.cpp)
-SOURCES := $(addprefix $(SRCDIR)/,$(BASESOURCES))
-OBJECTS := $(addprefix $(OBJDIR)/,$(addsuffix .o,$(basename $(BASESOURCES))))
-DEPENDS := $(addprefix $(DEPDIR)/,$(addsuffix .d,$(basename $(BASESOURCES))))
+#	Specify the level of optimization that you want. Specify either NONE (O0),
+#	SOME (O1), FULL (O2), or leave blank (for the default optimization level).
+OPTIMIZE := 
 
-#BASEHEADERS := $(shell cd $(SRCDIR) && ls -1 *.h)
-#HEADERS := $(addprefix $(SRCDIR)/,$(BASEHEADERS))
+# 	Specify the codes for languages you are going to support in this
+# 	application. The default "en" one must be provided too. "make catkeys"
+# 	will recreate only the "locales/en.catkeys" file. Use it as a template
+# 	for creating catkeys for other languages. All localization files must be
+# 	placed in the "locales" subdirectory.
+LOCALES = 
 
-.PHONY : default release clean zipfile all
+#	Specify all the preprocessor symbols to be defined. The symbols will not
+#	have their values set automatically; you must supply the value (if any) to
+#	use. For example, setting DEFINES to "DEBUG=1" will cause the compiler
+#	option "-DDEBUG=1" to be used. Setting DEFINES to "DEBUG" would pass
+#	"-DDEBUG" on the compiler's command line.
+DEFINES = _TTE_
 
-.DELETE_ON_ERROR : $(RELEASEDIR)/$(BINARY)
+#	Specify the warning level. Either NONE (suppress all warnings),
+#	ALL (enable all warnings), or leave blank (enable default warnings).
+WARNINGS = 
 
-default : build
+#	With image symbols, stack crawls in the debugger are meaningful.
+#	If set to "TRUE", symbols will be created.
+SYMBOLS := 
 
-build : $(BINARY)
+#	Includes debug information, which allows the binary to be debugged easily.
+#	If set to "TRUE", debug info will be created.
+DEBUGGER := 
 
-# rule to create the object file directory if needed
-$(OBJDIR)::
-	@[ -d $(OBJDIR) ] || mkdir $(OBJDIR) > /dev/null 2>&1
+#	Specify any additional compiler flags to be used.
+COMPILER_FLAGS := $(shell taglib-config --cflags)
 
-clean :
-	@echo cleaning
-	@rm -rf $(RELEASEDIR) $(OBJDIR) $(DEPDIR)
-	@rm -f $(TEMPDEPFILE)
-	@rm -rf /tmp/$(SHORTNAME)
-	@rm -rf /tmp/$(ZIPFULLNAME).zip
-	@rm -rf $(RELEASEDIR)/$(SHORTNAME)
-	@rm -rf $(RELEASEDIR)/$(ZIPFULLNAME).zip
+#	Specify any additional linker flags to be used.
+LINKER_FLAGS = 
 
-all : zipfile
+#	Specify the version of this binary. Example:
+#		-app 3 4 0 d 0 -short 340 -long "340 "`echo -n -e '\302\251'`"1999 GNU GPL"
+#	This may also be specified in a resource.
+APP_VERSION := 
 
-release : $(BINARY)
-	@mkdir -p $(RELEASEDIR)
-	@cp -r $(DATADIR)/ $(RELEASEDIR)/Documentation
-	@cp -r $(CHANGELOG) "$(RELEASEDOCSDIR)/Change Log"
-	@find $(RELEASEDIR) -type d| grep .svn$$ | xargs -n1 -i"{}" rm -rf "{}"
-	@mimeset -f $(RELEASEDIR)
+#	(Only used when "TYPE" is "DRIVER"). Specify the desired driver install
+#	location in the /dev hierarchy. Example:
+#		DRIVER_PATH = video/usb
+#	will instruct the "driverinstall" rule to place a symlink to your driver's
+#	binary in ~/add-ons/kernel/drivers/dev/video/usb, so that your driver will
+#	appear at /dev/video/usb when loaded. The default is "misc".
+DRIVER_PATH = 
 
-$(BINARY) : $(OBJDIR) $(OBJECTS)
-	@mkdir -p $(RELEASEDIR)/
-	@echo linking $@
-	@$(LD) -o $(RELEASEDIR)/$@ $(OBJECTS) $(LDFLAGS)
-	@echo merging resources
-	@rc $(SRCDIR)/$(RESOURCESRDEF)
-	@xres -o $(RELEASEDIR)/$@ $(SRCDIR)/$(RESOURCES)
-	@mimeset -f $(RELEASEDIR)/$@
-	
-$(OBJDIR)/%.o : $(SRCDIR)/%.cpp
-	@echo $(CC) $< $(CFLAGS) -o $@
-	@$(CC) $< $(CFLAGS) -o $@
-
-$(DEPDIR)/%.d : $(SRCDIR)/%.cpp
-	@/bin/echo generating dependencies for $<
-	@/bin/echo $@ $(OBJDIR)/$(shell $(DEP) $<) > $(TEMPDEPFILE)
-	@/bin/echo $(OBJDIR)/$(basename $(@F))".o : $(MAKEFILE)" | /bin/cat - $(TEMPDEPFILE) > $@
-
-zipfile : clean release
-#	@rm -rf $(RELEASEDIR)/../$(SHORTNAME)
-	@copyattr -d -r $(RELEASEDIR)/ /tmp/$(SHORTNAME)
-	@cd /tmp && $(ZIP) $(ZIPFULLNAME).zip $(SHORTNAME)
-	@mv /tmp/$(ZIPFULLNAME).zip $(RELEASEDIR)/../
-	@rm -rf /tmp/$(ZIPFULLNAME)
-
-ifneq ($(MAKECMDGOALS),clean)
-ifneq ($(MAKECMDGOALS),depend)
--include $(DEPENDS)
-endif
-endif
-
+## Include the Makefile-Engine
+DEVEL_DIRECTORY := \
+	$(shell findpaths -r "makefile_engine" B_FIND_PATH_DEVELOP_DIRECTORY)
+include $(DEVEL_DIRECTORY)/etc/makefile-engine
